After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683263 - gsth264parser: fix Coverity detected off by one at call to READ_UE_ALLOWED.
gsth264parser: fix Coverity detected off by one at call to READ_UE_ALLOWED.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.10.23
Other Windows
: Normal normal
: 0.10.24
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-03 11:23 UTC by Peter Seiderer
Modified: 2012-09-14 10:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch gsth264parser: fix Coverity detected off by one at call to READ_UE_ALLOWED. (942 bytes, patch)
2012-09-03 11:25 UTC, Peter Seiderer
committed Details | Review

Description Peter Seiderer 2012-09-03 11:23:29 UTC
Attached patch fixes Coverity detected off by one at call to
 READ_UE_ALLOWED in gst-plugins-bad-0.10.23/gst-libs/gst/codecparsers/gsth264parser.c
Comment 1 Peter Seiderer 2012-09-03 11:25:10 UTC
Created attachment 223284 [details] [review]
patch gsth264parser: fix Coverity detected off by one at call to  READ_UE_ALLOWED.
Comment 2 Mark Nauwelaerts 2012-09-14 10:21:36 UTC
commit 900f59c7a3545b494e12f3808727b7405c2d60fb
Author: Peter Seiderer <ps.report@gmx.net>
Date:   Mon Sep 3 13:09:29 2012 +0200

    gsth264parser: fix Coverity detected off by one at call to READ_UE_ALLOWED.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=683263