gsth264parser: fix Coverity detected off by one at call to READ_UE_ALLOWED.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=683263